[tool.poetry]
name = "aclue-dart-data-store"
version = "0.1.0"
description = ""
authors = ["jonha892 <jhalstrup@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
sqlmodel = "^0.0.6"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
